--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
-<h1>Burgers!</h1>
+<h1 style="text-align: center;">Burger Checklist!</h1>
 
-<h2>Cats that are not sleepy!</h2>
+<h2 style="text-align: center;">Burgers for the future!</h2>
 
 <ul>
   {{#each burgers}}
@@ -10,7 +10,7 @@
   {{/each}}
 </ul>
 
-<h2>Cats that are sleepy!</h2>
+<h2 style="text-align: center;">Burgers already munched!</h2>
 
 <ul>
   {{#each burgers}}
@@ -20,7 +20,7 @@
   {{/each}}
 </ul>
 
-<h2>Add a Burger</h2>
+<h2 style="text-align: center;">Add a Burger</h2>
 <form class="create-form">
 
   <div class="form-group">
@@ -31,7 +31,7 @@
   <div class="form-group">
     <label for="devoured">Devoured?</label><br>
     <input type="radio" name="devoured" value="1" checked> Devoured!<br>
-    <input type="radio" name="devoured" value="0"> Awaiting
+    <input type="radio" name="devoured" value="0"> Awaiting destruction...
   </div>
 
   <button type="submit">Add Burger</button>
