--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,9 +1,8 @@
 <li>
 	{{name}}
 
-	<button class="change-devoured" data-id=`{{id}}` data-newDevoured=`{{devour}}`>
-		{{#if devoured}}Devoured!{{else}}Time to feast!{{/if}}
+	<button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
+		{{#if devoured}}Munch!{{else}}Needs a second try{{/if}}
 	</button>
 
-	<button class="delete-burger" data-id=`{{this.id}}`>DELETE!</button>
 </li>
