--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -4,5 +4,6 @@
 	<button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
 		{{#if devoured}}Munch!{{else}}Needs a second try{{/if}}
 	</button>
+	<button class="delete" data-id="{{id}}">Delete</button>
 
 </li>
