--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,8 +4,10 @@ li {
   background: black;
   color: white;
   text-align: center;
-  width:auto;
+  width:50%;
   box-sizing: border-box;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .label {
@@ -19,8 +21,10 @@ li {
   color: white;
   background: black;
   text-align: center;
-  width:auto;
+  width:40%;
   box-sizing: border-box;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .form-group {
